# cafi-contracts

./: .gitignore
cafi-token/erc20/src/: constants.rs  entry_points.rs  error.rs  lib.rs  minter.rs
cafi/contracts/: Cargo.toml
market/contracts/: Cargo.toml
market/contracts/src/: constants.rs  entry_points.rs  error.rs  events.rs  helpers.rs  main.rs  named_keys.rs
note-token/: .gitignore  Makefile
note-token/erc20/src/: constants.rs  entry_points.rs  error.rs  helpers.rs  lib.rs
note-token/scripts/: approveEXP.js  burnEXP.js  deployNOTE.js  depositUSDC.js  erc20.js  getInfoEXP.js  getInfoNOTE.js  redeemUSDC.js  supportedToken.js  supportedTokenDecimals.js  transfer_fromEXP.js
note/contracts/: Cargo.toml
oracle/: Makefile
oracle/contracts/: Cargo.toml
stableswap/: Makefile  package.json
stableswap/contracts/: Cargo.toml
stableswap/contracts/src/: ampl.rs  constants.rs  lock.rs  (+12 more)
stableswap/tests/: Cargo.toml
stableswap/tests/src/: lib_integration_tests.rs
stableswap/tests/test-session/: Cargo.toml
stableswap/tests/test-session/src/: main.rs
stableswap/tests/wasm/: contract.wasm  erc20-token.wasm  erc20_token.wasm  test-session.wasm
staking/: .gitignore  Makefile
staking/contracts/: Cargo.toml
staking/scripts/: addNewPool0.js  addNewPool0U128.js  addNewPool1.js  addNewPool1U128.js  deployStaking.js  deployStakingU128.js  getInfoCep78.js  getInfoStaking.js  getPendingReward.js  marketPaymentContract.js  sdkStaking.js  stake.js  stake2.js  stakeU128.js  stakeU128Pool1.js  transferOwner.js  unStake.js  utils.js
staking/tests/: Cargo.toml
(+13 files in other folders)
